--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,14 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="www.battlecall.tk.basedemo">
 
-    <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES"></uses-permission>
-    <uses-permission android:name="android.permission.FORCE_STOP_PACKAGES"></uses-permission>
+    <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES"/>
+    <uses-permission android:name="android.permission.FORCE_STOP_PACKAGES"/>
 
     <permission
         android:name="android.permission.FORCE_STOP_PACKAGES"
         android:permissionGroup="android.permission-group.SYSTEM_TOOLS"
         android:protectionLevel="signature"
-        android:sharedUserId="android.uid.system" />
+        android:sharedUserId="android.uid.system"/>
 
     <application
         android:allowBackup="true"
@@ -26,11 +26,13 @@
         <activity android:name=".dispatch.DispatchActivity">
         </activity>
         <activity android:name=".MainActivity">
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.MAIN"/>-->
 
-                <!--<category android:name="android.intent.category.LAUNCHER"/>-->
-            <!--</intent-filter>-->
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN"/> -->
+
+
+            <!-- <category android:name="android.intent.category.LAUNCHER"/> -->
+            <!-- </intent-filter> -->
         </activity>
         <activity android:name=".customview.ViewActivity">
         </activity>
@@ -40,7 +42,7 @@
         </activity>
         <activity android:name=".keepalive.LowMemoryActivity">
         </activity>
-        <activity android:name=".keepalive.OnePxActivity">
+        <activity android:name=".keepalive.IncreaseByNotificationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -50,14 +52,31 @@
 
         <service android:name=".keepalive.PushService">
             <intent-filter>
-                <action android:name="test.PushService"></action>
+                <action android:name="test.PushService"/>
             </intent-filter>
         </service>
         <service android:name=".keepalive.SlaveService">
             <intent-filter>
-                <action android:name="test.SlaveService"></action>
+                <action android:name="test.SlaveService"/>
             </intent-filter>
         </service>
+<!--            android:theme="@android:style/Theme.Translucent"-->
+        <activity
+            android:name=".keepalive.OnePixActivity"
+            android:excludeFromRecents="true"
+            android:exported="false"
+            android:finishOnTaskLaunch="false"
+            android:launchMode="singleInstance"
+            android:process=":main"
+            android:configChanges="keyboardHidden|orientation|screenSize">
+            <intent-filter>
+                <!--但是这里有一个问题，USER_PRESENT 可以静态注册，其余两个只能通过动态注册才能收到广播。
+                我们索性把这三个广播都动态和静态注册一次，反正不会有什么坏处。-->
+                <action android:name="android.intent.action.USER_PRESENT"></action>
+                <action android:name="android.intent.action.SCREEN_ON"></action>
+                <action android:name="android.intent.action.SCREEN_OFF"></action>
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
