--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,12 @@
 
     <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES"/>
     <uses-permission android:name="android.permission.FORCE_STOP_PACKAGES"/>
+    <uses-permission android:name="cjl.permission.test"/>
 
+    <permission
+        android:name="cjl.permission.test"
+        android:protectionLevel="normal">
+    </permission>
     <permission
         android:name="android.permission.FORCE_STOP_PACKAGES"
         android:permissionGroup="android.permission-group.SYSTEM_TOOLS"
@@ -26,13 +31,11 @@
         <activity android:name=".dispatch.DispatchActivity">
         </activity>
         <activity android:name=".MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
 
-            <!-- <intent-filter> -->
-            <!-- <action android:name="android.intent.action.MAIN"/> -->
-
-
-            <!-- <category android:name="android.intent.category.LAUNCHER"/> -->
-            <!-- </intent-filter> -->
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
         </activity>
         <activity android:name=".customview.ViewActivity">
         </activity>
@@ -43,11 +46,13 @@
         <activity android:name=".keepalive.LowMemoryActivity">
         </activity>
         <activity android:name=".keepalive.IncreaseByNotificationActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN"/> -->
+
+
+            <!-- <category android:name="android.intent.category.LAUNCHER"/> -->
+            <!-- </intent-filter> -->
         </activity>
 
         <service android:name=".keepalive.PushService">
@@ -60,44 +65,44 @@
                 <action android:name="test.SlaveService"/>
             </intent-filter>
         </service>
-<!--            android:theme="@android:style/Theme.Translucent"-->
+        <!-- android:theme="@android:style/Theme.Translucent" -->
         <activity
             android:name=".keepalive.OnePixActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:excludeFromRecents="true"
             android:exported="false"
             android:finishOnTaskLaunch="false"
             android:launchMode="singleInstance"
-            android:process=":main"
-            android:configChanges="keyboardHidden|orientation|screenSize">
+            android:process=":main">
             <intent-filter>
-                <!--但是这里有一个问题，USER_PRESENT 可以静态注册，其余两个只能通过动态注册才能收到广播。
-                我们索性把这三个广播都动态和静态注册一次，反正不会有什么坏处。-->
-                <action android:name="android.intent.action.USER_PRESENT"></action>
-                <action android:name="android.intent.action.SCREEN_ON"></action>
-                <action android:name="android.intent.action.SCREEN_OFF"></action>
+
+                <!--
+                但是这里有一个问题，USER_PRESENT 可以静态注册，其余两个只能通过动态注册才能收到广播。
+                我们索性把这三个广播都动态和静态注册一次，反正不会有什么坏处。
+                -->
+                <action android:name="android.intent.action.USER_PRESENT"/>
+                <action android:name="android.intent.action.SCREEN_ON"/>
+                <action android:name="android.intent.action.SCREEN_OFF"/>
             </intent-filter>
         </activity>
 
-
-        <receiver android:name=".keepalive.SystemReceiver"
-                  android:process=":main">
-            <intent-filter >
-                <action android:name="android.intent.action.USER_PRESENT"></action>
-
+        <receiver
+            android:name=".keepalive.SystemReceiver"
+            android:process=":main">
+            <intent-filter>
+                <action android:name="android.intent.action.USER_PRESENT"/>
                 <action android:name="android.net.conn.CONNECTIVITY_CHANGE"/>
-
                 <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED"/>
                 <action android:name="android.intent.action.ACTION_POWER_CONNECTED"/>
 
                 <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
-
             <intent-filter>
-                <action android:name="com.android.camera.NEW_PICTURE" />
-                <action android:name="android.hardware.action.NEW_PICTURE" />
-                <data android:mimeType="image/*" />
-            </intent-filter>
+                <action android:name="com.android.camera.NEW_PICTURE"/>
+                <action android:name="android.hardware.action.NEW_PICTURE"/>
 
+                <data android:mimeType="image/*"/>
+            </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.PACKAGE_ADDED"/>
                 <action android:name="android.intent.action.PACKAGE_REMOVED"/>
@@ -106,10 +111,33 @@
             </intent-filter>
         </receiver>
 
-        <service android:name=".keepalive.ScheduleService"
+        <service
+            android:name=".keepalive.ScheduleService"
             android:permission="android.permission.BIND_JOB_SERVICE">
-
         </service>
+
+        <activity android:name=".broadcast.InterceptActivity">
+        </activity>
+
+        <receiver android:name=".broadcast.MyBroadCastOne">
+            <intent-filter android:priority="1000">
+                <action android:name="cjl.broadcast.test"/>
+                <!-- <category android:name="android.intent.category.DEFAULT"></category> -->
+            </intent-filter>
+        </receiver>
+        <receiver android:name=".broadcast.MyBroadCastTwo">
+            <intent-filter android:priority="999">
+                <action android:name="cjl.broadcast.test"/>
+            </intent-filter>
+        </receiver>
+        <receiver android:name=".broadcast.MyBroadCastThird">
+            <intent-filter android:priority="998">
+                <action android:name="cjl.broadcast.test"/>
+            </intent-filter>
+        </receiver>
+
+        <activity android:name=".activity.LifecycleActivity">
+        </activity>
     </application>
 
 </manifest>
