--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -192,9 +192,18 @@
             android:enabled="true"
             android:exported="true">
             <intent-filter>
-                <action android:name="cjl.myForegroundService"></action>
+                <action android:name="cjl.myForegroundService"/>
             </intent-filter>
         </service>
+        <service
+            android:name=".service.MyAidlService"
+            android:enabled="true"
+            android:exported="true"
+            android:process=":aidl">
+        </service>
+
+        <activity android:name=".service.ServiceAIDLActivity">
+        </activity>
     </application>
 
 </manifest>
