--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:27.+'
     compile 'com.android.support:recyclerview-v7:27.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.1.0-beta5'
+    compile 'com.android.support:support-v4:27.+'
+    compile 'com.google.android.gms:play-services-plus:11.0.4'
     testCompile 'junit:junit:4.12'
 }
