--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,9 @@
     <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES"/>
     <uses-permission android:name="android.permission.FORCE_STOP_PACKAGES"/>
     <uses-permission android:name="cjl.permission.test"/>
-    <!--<uses-permission android:name="android.permission.INTERNET"/>-->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+     <uses-permission android:name="android.permission.INTERNET"/>
 
     <permission
         android:name="cjl.permission.test"
@@ -213,6 +215,8 @@
         <activity android:name=".fragment.BannerActivity">
         </activity>
         <activity android:name=".webview.WebViewActivity">
+        </activity>
+        <activity android:name=".ExecCommandActivity">
         </activity>
     </application>
 
