--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="cjl.permission.test"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <permission
         android:name="cjl.permission.test"
@@ -217,6 +217,10 @@
         <activity android:name=".webview.WebViewActivity">
         </activity>
         <activity android:name=".ExecCommandActivity">
+        </activity>
+        <activity android:name=".handler.HandlerActivity">
+        </activity>
+        <activity android:name=".asyncTask.AsyncTaskActivity">
         </activity>
     </application>
 
