--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -222,6 +222,8 @@
         </activity>
         <activity android:name=".asyncTask.AsyncTaskActivity">
         </activity>
+        <activity android:name=".handlerthread.HanderThreadActivity">
+        </activity>
     </application>
 
 </manifest>
