--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -207,6 +207,8 @@
             android:exported="true"
             android:process=":aidl">
         </service>
+        <service android:name=".intentService.IntentService1">
+        </service>
 
         <activity android:name=".service.ServiceAIDLActivity">
         </activity>
@@ -223,6 +225,10 @@
         <activity android:name=".asyncTask.AsyncTaskActivity">
         </activity>
         <activity android:name=".handlerthread.HanderThreadActivity">
+        </activity>
+        <activity android:name=".intentService.IntentServiceActivity">
+        </activity>
+        <activity android:name=".expand.MultipleThreadSequentialExe">
         </activity>
     </application>
 
