--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -228,7 +228,7 @@
         </activity>
         <activity android:name=".intentService.IntentServiceActivity">
         </activity>
-        <activity android:name=".expand.MultipleThreadSequentialExe">
+        <activity android:name=".handlerthread.MultiThSqExActivity">
         </activity>
     </application>
 
